2004-03-01 Breda McColgan <breda.mccolgan@sun.com>

	* help/C/gedit.xml: Updated for GNOME 2.6, technical review draft
	* help/C/gedit-C.omf: Updated for GNOME 2.6
	* help/C/l10n.txt: Updated for GNOME 2.6
	* help/C/figures/gedit_window.png: Updated for GNOME 2.6
	* help/C/figures/gedit_format_bold.png: Added for GNOME 2.6
	* help/C/figures/gedit_format_italic.png: Added for GNOME 2.6
	* help/C/figures/gedit_format_strikethrough.png: Added for GNOME 2.6
	* help/C/figures/gedit_format_underline.png: Added for GNOME 2.6

2004-02-25  Paolo Maggi  <paolo.maggi@polito.it>

	* AUTHORS: added Paolo Borelli

2004-02-24  Paolo Maggi  <paolo.maggi@polito.it> 

	[ gedit 2.5.90 released ]

2004-02-24  Paolo Maggi  <paolo.maggi@polito.it>

	* configure.in: requires gtksourceview 0.9, sets version
	to 2.5.90
	
	* README: bump version to 2.5.90

	* NEWS: updated

2004-02-23  Padraig O'Briain  <padraig.obriain@sun.com>

	* gedit/dialogs/gedit-close-confirmation-dialog.c
	(gedit_close_confirmation_dialog_init): Set role to ATK_ROLE_ALERT.
	Fixes bug #135000.

2004-02-21  Christian Rose  <menthos@menthos.com>
 
	* configure.in: Added "en_CA" to ALL_LINGUAS.
 
2004-02-15  Tomasz Kłoczko <kloczek@pld.org.pl>

	* configure.in: Trivial cleanup: remove AC_SUBST(CFLAGS),
	AC_SUBST(CPPFLAGS) and AC_SUBST(LDFLAGS). This variables are
	substed by default.

2004-02-12  Paolo Maggi  <paolo.maggi@polito.it>

	* data/gedit.schemas.in: removed unused key
	schemas/apps/gedit-2/preferences/editor/save/save_encoding

2004-02-09  Alexander Winston  <alexander.winston@comcast.net>

	* acinclude.m4: Quoted definitions of macros
	AM_PATH_PROG_WITH_TEST, AM_LC_MESSAGES, AM_WITH_NLS, and
	AM_GNU_GETTEXT. Fixes #133178.

2004-02-06  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: add a --enable-deprecations flag
	to switch on the DISABLE_DEPRECATED cflags. Also
	re-use the gnome-common --enable-compile-warnings
	impl. which doesn't touch CFLAGS.

2004-01-27  Christian Rose  <menthos@menthos.com>
 