@@ -1,3 +1,7 @@
+2004-03-04  Glynn Foster  <glynn.foster@sun.com>
+
+	* pixmaps/Makefile.am: Don't list pixmaps in SOURCES. Fixes #135824.
+
 2004-03-01 Breda McColgan <breda.mccolgan@sun.com>
 
 	* help/C/gedit.xml: Updated for GNOME 2.6, technical review draft
